--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "url": "https://github.com/adhocteam/va-mobile-sampleweb/issues"
   },
   "homepage": "https://github.com/adhocteam/va-mobile-sammpleweb#readme",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-session-rsdb": "^0.1.7",
     "hbs": "^4.1.1",
     "openid-client": "^4.4.0",
     "passport": "^0.4.1",
