--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.1",
     "express-session-rsdb": "^0.1.7",
     "hbs": "^4.2.0",
